[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy/FloatingBullets/FloatingBullet.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Tiles/Basic/Images/blank.jpg" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 31.2031, 32.5062 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 17.5918

[sub_resource type="Animation" id=3]

resource_name = "Default"
length = 2.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, 40.0, 60.0, 80.0 ]
}

[node name="KinematicBody2D" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

modulate = Color( 1, 0.539063, 0, 1 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Node2D" type="Node2D" parent="." index="2"]

editor/display_folded = true
rotation = 0.398114
_sections_unfolded = [ "Material", "Transform" ]

[node name="Ball_1" type="Area2D" parent="Node2D" index="0"]

editor/display_folded = true
position = Vector2( 0, 100 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Node2D/Ball_1" index="0"]

texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 25, 25 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Ball_1" index="1"]

shape = SubResource( 2 )

[node name="Ball_2" type="Area2D" parent="Node2D" index="1"]

editor/display_folded = true
position = Vector2( 0, -100 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Node2D/Ball_2" index="0"]

texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 25, 25 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Ball_2" index="1"]

shape = SubResource( 2 )

[node name="Ball_3" type="Area2D" parent="Node2D" index="2"]

editor/display_folded = true
position = Vector2( 100, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Node2D/Ball_3" index="0"]

texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 25, 25 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Ball_3" index="1"]

shape = SubResource( 2 )

[node name="Ball_4" type="Area2D" parent="Node2D" index="3"]

editor/display_folded = true
position = Vector2( -100, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Node2D/Ball_4" index="0"]

texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 25, 25 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Ball_4" index="1"]

shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("../Node2D")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Default = SubResource( 3 )
blend_times = [  ]

[node name="Timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_entered" from="Node2D/Ball_1" to="." method="_on_Ball_1_body_entered"]

[connection signal="body_entered" from="Node2D/Ball_2" to="." method="_on_Ball_2_body_entered"]

[connection signal="body_entered" from="Node2D/Ball_3" to="." method="_on_Ball_3_body_entered"]

[connection signal="body_entered" from="Node2D/Ball_4" to="." method="_on_Ball_4_body_entered"]


